syntax = "proto3";

package proto;

option go_package = "github.com/stnokott/spacetrader-server/internal/proto";
option csharp_namespace = "GrpcSpacetrader";

message System {
	string id = 1;
	string sector = 2;

	enum Type {
		UNKNOWN_SYSTEMTYPE = 0;
		NEUTRON_STAR = 1;
		RED_STAR = 2;
		ORANGE_STAR = 3;
		BLUE_STAR = 4;
		YOUNG_STAR = 5;
		WHITE_DWARF = 6;
		BLACK_HOLE = 7;
		HYPERGIANT = 8;
		NEBULA = 9;
		UNSTABLE = 10;
	}
	Type type = 3;

	int32 x = 4;
	int32 y = 5;
	repeated WaypointBase waypoints = 6;

	// Factions that control this system.
	repeated Faction factions = 7;
}

message WaypointBase {
	string id = 1;
	string system = 2;

	enum Type {
		UNKNOWN_WAYPOINTTYPE = 0;
		PLANET = 1;
		GAS_GIANT = 2;
		MOON = 3;
		ORBITAL_STATION = 4;
		JUMP_GATE = 5;
		ASTEROID_FIELD = 6;
		ASTEROID = 7;
		ENGINEERED_ASTEROID = 8;
		ASTEROID_BASE = 9;
		NEBULA = 10;
		DEBRIS_FIELD = 11;
		GRAVITY_WELL = 12;
		ARTIFICIAL_GRAVITY_WELL = 13;
		FUEL_STATION = 14;
	}
	Type type = 3;

	int32 x = 4;
	int32 y = 5;
}

enum Faction {
	UNKNOWN_FACTION = 0;
	COSMIC = 1;
	VOID = 2;
	GALACTIC = 3;
	QUANTUM = 4;
	DOMINION = 5;
	ASTRO = 6;
	CORSAIRS = 7;
	OBSIDIAN = 8;
	AEGIS = 9;
	UNITED = 10;
	SOLITARY = 11;
	COBALT = 12;
	OMEGA = 13;
	ECHO = 14;
	LORDS = 15;
	CULT = 16;
	ANCIENTS = 17;
	SHADOW = 18;
	ETHEREAL = 19;
}
